# CameraCPP_OpenCV

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  bash.exe.stackdump  config.ui  formatdialog.cpp  formatdialog.h  formatdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  shortcutsdialog.cpp  shortcutsdialog.h  shortcutsdialog.ui
